# hayate-office

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  flake.nix  hayate-deck.pptx  hayate-sample.hayate.autosave  untitled.hayates
crates/hayate-app/: Cargo.toml  hayate-sample.hayate.autosave
crates/hayate-app/src/: actions.rs  ai.rs  e2e.rs  home.rs  icons.rs  input.rs  io.rs  layers.rs  main.rs  menu.rs  mouse.rs  paint.rs  recent.rs  slides.rs  util.rs  view.rs  widgets.rs
crates/hayate-core/: Cargo.toml
crates/hayate-core/src/: ai.rs  lib.rs  script.rs  tests.rs
crates/hayate-core/src/ai/: tests.rs
crates/hayate-core/src/script/: tests.rs
crates/hayate-format/: Cargo.toml
crates/hayate-format-pptx/: Cargo.toml
crates/hayate-format-pptx/src/: lib.rs  tests.rs
crates/hayate-format/src/: lib.rs  tests.rs
crates/hayate-ir/: Cargo.toml
crates/hayate-ir/src/: anim.rs  color.rs  doc.rs  font.rs  frac.rs  geom.rs  image.rs  lib.rs  paint.rs  presentation.rs  shape.rs  text.rs  theme.rs  units.rs  world.rs
crates/hayate-ir/src/color/: tests.rs
crates/hayate-ir/src/frac/: tests.rs
crates/hayate-ir/src/geom/: tests.rs
crates/hayate-ir/src/presentation/: tests.rs
crates/hayate-ir/src/theme/: tests.rs
crates/hayate-ir/src/units/: tests.rs
crates/hayate-ir/src/world/: tests.rs
crates/hayate-model/: Cargo.toml
crates/hayate-model/src/: align.rs  edit.rs  history.rs  lib.rs  op.rs
crates/hayate-model/src/align/: tests.rs
crates/hayate-model/src/edit/: tests.rs
crates/hayate-model/src/history/: tests.rs
crates/hayate-render/: Cargo.toml
crates/hayate-render/src/: build.rs  grid.rs  guides.rs  handles.rs  hit.rs  lib.rs  linebreak.rs  pdf.rs  pdf_font.rs  pdf_subset.rs  png.rs  raster.rs  scene.rs  svg.rs  typst_render.rs
crates/hayate-render/src/grid/: tests.rs
crates/hayate-render/src/guides/: tests.rs
crates/hayate-render/src/handles/: tests.rs
crates/hayate-render/src/hit/: tests.rs
crates/hayate-render/src/linebreak/: tests.rs
crates/hayate-render/src/png/: tests.rs
crates/hayate-render/src/raster/: font.rs  tests.rs
crates/hayate-render/src/raster/font/: tests.rs
crates/hayate-render/src/scene/: tests.rs
crates/hayate-render/src/svg/: tests.rs
crates/hayate-shot/: Cargo.toml
crates/hayate-shot/src/: main.rs
docs/: DESIGN.md  REQUIREMENTS.md  scripting-api.md  scripting-api.schema.json
docs/script-examples/: add-title.rhai  grid-of-rectangles.rhai  intro-lt.rhai  nudge-all.rhai  recolor-selection.rhai
scripts/: hayate-office.sh
