[package]
name = "hayate-app"
description = "HayateOffice presentation editor (gpui app)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
hayate-model.workspace = true
hayate-render.workspace = true
hayate-format = { path = "../hayate-format" }
hayate-format-pptx = { path = "../hayate-format-pptx" }
hayate-core = { path = "../hayate-core" }
serde_json.workspace = true
# Build recent-file thumbnails across cores on a background thread (home screen).
rayon = "1"
gpui.workspace = true
# Decode the embedded app logo into the RGBA image gpui wants for the X11 window icon.
# Pinned to the same 0.25 line gpui resolves, so the dependency graph stays unified.
image = "0.25"
# Linux windowing backends for gpui_platform.
gpui_platform = { workspace = true, features = ["wayland", "x11"] }

[dev-dependencies]
# Headless interaction tests drive the real UI handlers through a gpui test context.
gpui = { workspace = true, features = ["test-support"] }
