[package]
name = "hayate-app"
description = "HayateOffice presentation editor (gpui app)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
hayate-model.workspace = true
hayate-render.workspace = true
hayate-format = { path = "../hayate-format" }
hayate-format-pptx = { path = "../hayate-format-pptx" }
hayate-core = { path = "../hayate-core" }
serde_json.workspace = true
# Build recent-file thumbnails across cores on a background thread (home screen).
rayon = "1"
# Blocking HTTP client (rustls TLS) for the optional AI script-authoring call to the Anthropic
# API. Runs on a background thread; the app works fully offline without it.
ureq = { version = "2", features = ["json", "tls"] }
gpui.workspace = true
# Decode the embedded app logo into the RGBA image gpui wants for the X11 window icon.
# Pinned to the same 0.25 line gpui resolves, so the dependency graph stays unified.
image = "0.25"
# Windowing backends for gpui_platform. `wayland`/`x11` are the Linux backends; `font-kit` enables
# the native CoreText text system on macOS (gpui_macos installs a no-op text system that renders no
# glyphs unless this feature is on — without it, all text is invisible on macOS).
gpui_platform = { workspace = true, features = ["wayland", "x11", "font-kit"] }

[dev-dependencies]
# Headless interaction tests drive the real UI handlers through a gpui test context.
gpui = { workspace = true, features = ["test-support"] }
