[package]
name = "hayate-core"
description = "HayateOffice command registry: the named/typed-arg surface palette/scripts/AI call (DESIGN 6.5/6.13)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
hayate-model.workspace = true
serde.workspace = true
serde_json = "1"
# Emits JSON Schema for the AI/script tool catalogue (validates/normalizes each tool's
# input schema; see `CommandRegistry::tool_schemas`).
schemars = "1"
# Embedded sandboxed scripting runtime (DESIGN 6.x extension system). Pure Rust, no IO; we do
# not enable the `sync` feature, so registered host functions can capture Rc/RefCell state.
rhai = "1"
