[package]
name = "hayate-format-pptx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
# default-features off to drop the bzip2/zstd native libs (we only need deflate/store),
# which also removes the libbz2.so.1 runtime dependency.
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
