[package]
name = "hayate-format"
description = "HayateOffice .hayate persistence (redb container, atomic save) (gpui-free)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
serde_json.workspace = true
redb.workspace = true
