[package]
name = "hayate-render"
description = "HayateOffice scene builder: Presentation -> backend-agnostic display list (gpui-free)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
# Real-font text rasterization for the headless rasterizer (shapes + renders with system fonts,
# incl. CJK), matching the on-screen gpui text closely. Same versions gpui already resolves, so
# these add nothing new to the lockfile.
cosmic-text = "0.19"
# Vector PDF export: ttf-parser reads font metrics for embedded CID fonts, flate2 compresses
# stream data (FlateDecode), and image decodes embedded pictures to RGB for image XObjects.
ttf-parser = "0.25"
flate2 = "1"
image = "0.25"
# Data-parallel PDF export: compress per-page content streams and embed images across cores.
# Already in the lockfile (pulled by image), so this adds nothing new.
rayon = "1"
# Typst typesetting for rich text boxes: compile the box's Typst source to a laid-out page,
# rasterize it for on-screen preview (typst-render), and walk its frame for selectable-text PDF.
# typst re-exports typst-library (World/Library/FontBook/Frame). typst-assets bundles the default
# fonts incl. the math font (New Computer Modern Math). Heavy dependency tree (one-time build cost).
typst = "0.14"
typst-render = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
