[package]
name = "hayate-shot"
description = "Headless visual debug harness: runs edit scenarios and writes PNG snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hayate-ir.workspace = true
hayate-model.workspace = true
hayate-render.workspace = true
hayate-core = { path = "../hayate-core" }
hayate-format-pptx = { path = "../hayate-format-pptx" }
serde_json.workspace = true
